--- a/assignment2.css
+++ b/assignment2.css
@@ -1,21 +1,24 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #fff;
+  background-color:#FAF7F0;
   line-height: 1.2;
   margin: 5px;
   padding: 5px;
 }
 #header {
-  background-color: #ffb6c1;
+  background-color: #D8D2C2;
   text-align: center;
   padding: 20px;
   border-radius: 5px;
 }
+h1,h2,h3,p{
+  color: #4A4947;
+}
 .profile-photo img {
-  width: 150px;
-  height: 150px;
+  width: 20%;
+  height: 20%;
   border-radius: 50%;
-  border: 5px solid #f8a9c4;
+  border: 5px solid #4A4947;
   padding: 4px;
   display: block;
   margin: 20px auto;
@@ -27,26 +30,22 @@ table {
   margin: 20px auto;
   font-family: Arial, sans-serif;
 }
-col.category {
-  background-color: #f9f9f9;
+col.Category {
+  background-color: #e0dad2;
   width: 30%;
 }
-col.details {
-  background-color: #ffffff;
+col.Details {
+  background-color: #f0ece5;
 }
 th,
 td {
-  border: 1px solid #ddd;
+  border: 1px solid #4A4947;
   padding: 10px;
-  text-align: left;
-}
-thead {
-  background-color: #f2f2f2;
+  text-align: center;
 }
 tfoot td {
   text-align: center;
   font-style: italic;
-  background-color: #f9f9f9;
 }
 section {
   margin: 5px;
@@ -54,5 +53,35 @@ section {
 audio,iframe{
   display: block;
   margin: auto;
+}
+.PlacetoDate{
+  text-align: center;
+  font-style: italic;
+}
+form{
+  width: 60%;           
+  margin:20px auto;       
+  background-color: #D8D2C2;
+  padding: 20px;
+  border-radius: 10px;
+}
+fieldset {
+  margin-bottom: 10px;
+  padding: 10px;
+}
 
+legend {
+  color: #615a4e;
+  font-weight: bold;
+}
+button {
+  background-color: #8a6758;
+  color: white;
+  border: none;
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+button:hover {
+  background-color: #B17457;
 }
